[package]
name = "dice_string_parser"
version = "0.1.0"
authors = ["Marc Chesebro <marc.chesebro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.1"
rand = "0.7.0"
regex = "1.3.1"
meval = "0.2"
prettytable-rs = "0.8.0"
itertools = "0.8.0"
