[package]
name = "destiny"
version = "0.2.0"
authors = ["Marc Chesebro <marc.chesebro@gmail.com>"]
edition = "2018"
description = "A library for rolling dice and calculating dice distributions."
license = "MIT"

repository = "https://github.com/MarcChesebro/destiny"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.1"
rand = "0.7.0"
regex = "1.3.1"
meval = "0.2"
prettytable-rs = "0.8.0"
itertools = "0.8.0"
